--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -6,12 +6,11 @@
   grid-template-rows: 50px auto 100px;
   grid-template-areas: 
     "header header" 
-    "main main" 
-    ". footer";
+    "main main";
 }
 
 .content {
-  margin: 2%;
+  margin: 1%;
   grid-area: main;
 
   -ms-grid-column: 1;
