--- a/src/styles/sidebar.module.css
+++ b/src/styles/sidebar.module.css
@@ -1,4 +1,5 @@
 aside {
+  margin: 1%;
   grid-area: sidebar;
 
   -ms-grid-column: 1;
